--- a/index.html
+++ b/index.html
@@ -2,23 +2,24 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>teagrams App</title>
+	<title>Notes App</title>
 	
 	<link rel="stylesheet" href="lib/touch/resources/css/sencha-touch.css">
 	
 	<script src="lib/touch/sencha-touch.js" type="text/javascript"></script>
 	
-	<script src="app/app.js" type="text/javascript"></script>
 	
-	<script src="app/models/TeagramPhoto.js" type="text/javascript"></script>
 	
-	<script src="app/views/Templates.js" type="text/javascript"></script>
-	<script src="app/views/Viewport.js" type="text/javascript"></script>
-	<script src="app/views/TeagramLists.js" type="text/javascript"></script>
+	<script src="app.js"></script>
 	
-	<script src="app/controllers/teagramsController.js" type="text/javascript"></script>
+	<script src="app/views/MainView.js"></script>
+	<script src="app/views/NoteEditorView.js"></script>
+	<script src="app/views/NotesListView.js"></script>
+
+	<script src="app/models/NoteModel.js"></script>
+	<script src="app/stores/NotesStore.js"></script>
+
+	<script src="app/controllers/NotesController.js"></script>
 </head>
-<body>
-	
-</body>
+<body></body>
 </html>
